--- a/tutorial-frontend/client/src/index.html
+++ b/tutorial-frontend/client/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Sin la línea siguiente no cargaban los iconos de edición y borrado de las pantallas -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
